# ArchonKit

./: .gitignore  .pre-commit-config.yaml  CONTRIB.md  README.md  TEST.md  pyproject.toml  requirements.txt
archonkit/: cli.py  helpers.py
archonkit/helpers/: __init__.py  app_scaffold.py  feature_scaffold.py
tests/: test_app_scaffolder.py  test_feature_scaffolder.py
